修改个人配置

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: BY Blog
-SEOTitle: 油炸板蓝根| BY Blog
+SEOTitle: 油炸板蓝根| ISATIS Blog
 header-img: img/post-bg-desk.jpg
 email: 413180794@qq.com
 description: "我曾踏月而来，只因你在山中"
