--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: BY Blog
-SEOTitle: 油炸板蓝根| ISATIS Blog
-header-img: img/post-bg-desk.jpg
-email: 413180794@qq.com
-description: "我曾踏月而来，只因你在山中"
-keyword: "BY, BY Blog, 油炸板蓝根, youzhabanlangen, 油炸板蓝根, Android, Apple, iPhone"
+title: ISATIS Blog # 标题
+SEOTitle: 油炸板蓝根| ISATIS Blog # 网页顶部标题
+header-img: img/post-bg-desk.jpg # 顶部的背景
+email: 413180794@qq.com # 个人邮箱
+description: "我曾踏月而来，只因你在山中" # 简述
+keyword: "ISATIS, ISATIS Blog, 油炸板蓝根, ISATIS, 油炸板蓝根, Android, Apple, iPhone"
 url: "https://413180794.github.io/"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/413180794/413180794.github.io.git" # you code repository
@@ -12,14 +12,14 @@ github_repo: "https://github.com/413180794/413180794.github.io.git" # you code r
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "打码写文，尽惹啼笑"
-sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/about-girl.jpg      #  侧边栏头像 use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
-# SNS settings
+# SNS settings  联系方式的设置
 RSS: false
-# weibo_username:     qiubaiying
-# zhihu_username:     qiubaiying
+weibo_username:     油炸板蓝根
+zhihu_username:     张帆
 github_username:    413180794
 # facebook_username:  baiying.qiu.7
 # jianshu_username:   e71990ada2fd
@@ -57,7 +57,7 @@ kramdown:
 
 # 评论系统
 # Disqus（https://disqus.com/）
-disqus_username: youzhabanlangen
+disqus_username: disqus_OqbH2XBDp5
 
 # Gitalk
 gitalk:
@@ -102,8 +102,8 @@ friends: [
         title: "WY",
         href: "http://zhengwuyang.com"
     },{
-        title: "简书·BY",
-        href: "http://www.jianshu.com/u/e71990ada2fd"
+        title: "知乎·ISATIS",
+        href: "https://www.zhihu.com/people/zhang-fan-54-9/activities"
     },{
         title: "Apple",
         href: "https://apple.com"
