--- a/_config.yml
+++ b/_config.yml
@@ -99,11 +99,11 @@ service-worker: true
 # Friends
 friends: [
     {
-        title: "WY",
-        href: "http://zhengwuyang.com"
+        title: "BLOG",
+        href: "https://413180794.github.io/"
     },{
         title: "知乎·ISATIS",
-        href: "https://www.zhihu.com/people/zhang-fan-54-9/activities"
+        href: "zhihu.com/people/makeMySail "
     },{
         title: "Apple",
         href: "https://apple.com"
